[feat] 재고를 저장 및 차감하는 기능 구현